samples/_failures_safe/1761326871_b6d473_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_34c6ae2a.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_34c6ae2a.c:150:13: error: expected identifier at end of input
  150 |             if (graph->edges[i].
      |             ^~
./samples/SAFE/__tmp_34c6ae2a.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_34c6ae2a.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_34c6ae2a.c:150:13: error: expected declaration or statement at end of input
